--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^7.1.0",
+    "multer": "^1.4.5-lts.1",
     "node": "^20.1.0",
     "nodemon": "^2.0.22",
     "stripe": "^12.4.0"
