--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dev": "nodemon server"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -13,6 +14,7 @@
     "multer": "^1.4.5-lts.1",
     "node": "^20.1.0",
     "nodemon": "^2.0.22",
-    "stripe": "^12.4.0"
+    "stripe": "^12.4.0",
+    "validator": "^13.9.0"
   }
 }
