--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "multer": "^1.4.5-lts.1",
     "node": "^20.1.0",
     "nodemon": "^2.0.22",
+    "rimraf": "^5.0.1",
     "stripe": "^12.17.0",
     "validator": "^13.9.0"
   }
