--- a/vercel.json
+++ b/vercel.json
@@ -1,95 +1,10 @@
 {
     "version": 2,
+    "name": "music-album",
     "builds": [
-        {
-            "src": "/app.js",
-            "use": "@vercel/node"
-        }
+       { "src": "server.js", "use": "@vercel/node" }
     ],
     "routes": [
-        {
-            "src": "/api/v1/products",
-            "dest": "./app.js",
-            "methods": [
-                "GET",
-                "POST",
-                "PUT",
-                "PATCH",
-                "DELETE",
-                "OPTIONS"
-            ]
-        },
-        {
-            "src": "/api/v1/category",
-            "dest": "/app.js",
-            "methods": [
-                "GET",
-                "POST",
-                "PUT",
-                "PATCH",
-                "DELETE",
-                "OPTIONS"
-            ]
-        },
-        {
-            "src": "/api/v1/users",
-            "dest": "/app.js",
-            "methods": [
-                "GET",
-                "POST",
-                "PUT",
-                "PATCH",
-                "DELETE",
-                "OPTIONS"
-            ]
-        },
-        {
-            "src": "/api/v1/addCart",
-            "dest": "/app.js",
-            "methods": [
-                "GET",
-                "POST",
-                "PUT",
-                "PATCH",
-                "DELETE",
-                "OPTIONS"
-            ]
-        },
-        {
-            "src": "/api/v1/address",
-            "dest": "/app.js",
-            "methods": [
-                "GET",
-                "POST",
-                "PUT",
-                "PATCH",
-                "DELETE",
-                "OPTIONS"
-            ]
-        },
-        {
-            "src": "/api/v1/payment",
-            "dest": "/app.js",
-            "methods": [
-                "GET",
-                "POST",
-                "PUT",
-                "PATCH",
-                "DELETE",
-                "OPTIONS"
-            ]
-        },
-        {
-            "src": "/(.*)",
-            "dest": "/",
-            "methods": [
-                "GET",
-                "POST",
-                "PUT",
-                "PATCH",
-                "DELETE",
-                "OPTIONS"
-            ]
-        }
+       { "src": "/(.*)", "dest": "/server.js" }
     ]
-}
+ }
