--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "main": "server.js",
   "scripts": {
-    "start": "node server",
+    "start": "node server.js",
     "dev": "nodemon server"
   },
   "dependencies": {
