changed server name

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
     "version": 2,
-    "name": "music-album",
+    "name": "chengra-bazar-server",
     "builds": [
        { "src": "server.js", "use": "@vercel/node" }
     ],
