--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "main": "server.js",
+  "main": "app.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon app.js"
   },
+  
   "dependencies": {
     "colors": "^1.4.0",
     "cors": "^2.8.5",
