--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,16 @@
-{
-    "version": 2,
-    "name": "chengra-bazar-server",
-    "builds": [
-       { "src": "server.js", "use": "@vercel/node" }
-    ],
-    "routes": [
-       { "src": "/(.*)", "dest": "/server.js" }
-    ]
- }
+
+ {
+   "version": 2,
+   "builds": [
+       {
+           "src": "app.js",
+           "use": "@vercel/node"
+       }
+   ],
+   "routes": [
+       {
+           "src": "/(.*)",
+           "dest": "app.js"
+       }
+   ]
+}
