--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon app.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
-  
   "dependencies": {
     "colors": "^1.4.0",
     "cors": "^2.8.5",
