--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,16 @@
-
- {
+{
    "version": 2,
+   "name": "chengra-bazar-server",
    "builds": [
-       {
-           "src": "app.js",
-           "use": "@vercel/node"
-       }
+      {
+         "src": "app.js",
+         "use": "@vercel/node"
+      }
    ],
    "routes": [
-       {
-           "src": "/(.*)",
-           "dest": "app.js"
-       }
+      {
+         "src": "/(.*)",
+         "dest": "/app.js"
+      }
    ]
 }
