--- a/vercel.json
+++ b/vercel.json
@@ -3,14 +3,14 @@
    "name": "chengra-bazar-server",
    "builds": [
       {
-         "src": "app.js",
+         "src": "server.js",
          "use": "@vercel/node"
       }
    ],
    "routes": [
       {
          "src": "/(.*)",
-         "dest": "/app.js"
+         "dest": "/server.js"
       }
    ]
 }
